[package]
name = "leet_daily"
version = "0.1.0"
edition = "2021"
description = "A utility for improving leetcode experience"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.17", features = ["derive"] }

